feat: favorite find, create, update